--- a/P1.ipynb
+++ b/P1.ipynb
@@ -844,6 +844,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
