Add documentation for challenge video

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -843,13 +843,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The output of the challenge video is in raw format, no extrapolation carried out.**"
+   ]
   },
   {
    "cell_type": "code",
